tests/snapshots/scenarios/025_cache_seeds_saliency-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "cache_build",
  "files": [
    "result.json"
  ],
  "scenario_id": "025_cache_seeds_saliency",
  "status": "validated"
}
