tests/snapshots/scenarios/026_graph_nav_neighbors_related_metadata_and_toc-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "graph_navigation",
  "files": [
    "result.json"
  ],
  "scenario_id": "026_graph_nav_neighbors_related_metadata_and_toc",
  "status": "validated"
}
