tests/snapshots/scenarios/034_md_attach_reference_links-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "markdown_attachments",
  "files": [
    "result.json"
  ],
  "scenario_id": "034_md_attach_reference_links",
  "status": "validated"
}
