tests/snapshots/scenarios/035_md_attach_relative_and_anchor-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "markdown_attachments",
  "files": [
    "result.json"
  ],
  "scenario_id": "035_md_attach_relative_and_anchor",
  "status": "validated"
}
